...
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
        android:text="Log In"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#007994"
        android:textSize="30sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="299dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
