...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:clickable="false"
    android:id="@+id/homeScreen">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!--  <include android:layout="@layout/navigation_action"
...
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        android:id="@+id/nav_view"/>




</androidx.drawerlayout.widget.DrawerLayout>
