<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logInScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical">


    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginBottom="100dp"
        android:maxLines="1"
        android:lines="1"
        android:background="#FFFFFF"
        android:gravity="start"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/passwordbox_signup"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="165dp"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:lines="1"
        android:gravity="start"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/confirmemailbox"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginBottom="227dp"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:lines="1"
        android:gravity="start"
        android:hint="Confirm Email"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/emailbox_signup"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="291dp"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:lines="1"
        android:gravity="start"
        android:hint="Email Address"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginBottom="352dp"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:lines="1"
        android:gravity="start"
        android:hint="First Name"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#858585"
        android:textSize="36sp" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="82dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/next" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="68dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/backarrow" />

    <TextView
        android:id="@+id/emailError"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="67dp"
        android:text="Emails do not match."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:layout_alignParentRight="true"
        android:layout_marginRight="67dp" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="162dp"
        android:gravity="center_horizontal"
        android:text="Passwords do not match."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/emailandpassError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="123dp"
        android:gravity="center_horizontal"
        android:text="Emails and passwords do not match."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/emailexistsError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="121dp"
        android:gravity="center_horizontal"
        android:text="Email already in use."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/blankError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="125dp"
        android:gravity="center_horizontal"
        android:text="Please enter input into all fields."
        android:textColor="#F44336"
        android:textSize="20sp"
        android:visibility="invisible" />


</RelativeLayout>